[project]
name = "nonebot-plugin-authrespond"
version = "1.0"
description = "nonebot简单易用的黑名单插件，实现分插件拉黑用户/群聊/全局"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {email = "cub_staryow@outlook.com"},
  {name = "cubstaryow"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "nonebot-adapter-onebot",
  "nonebot2",
  "nonebot-plugin-localstore",
  "aiohttp"
]

[project.urls]
repository = "https://github.com/cubstaryow/nonebot-plugin-authrespond"
